--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
      crossorigin="anonymous"></script>
      <script src="https://kit.fontawesome.com/354237648a.js" crossorigin="anonymous"></script>
     
-    <title>Namaste</title>
+    <title>RM'S Tech World</title>
 </head>
 <body>
     <!--Navbar-->
     <nav class="navbar navbar-expand-sm fixed-top bg-white shadow">
         <div class="container my-2">
             <a href="/" class="navbar-brand text-dark font-weight-bold">
-            Srivastava & Co.
+            RM's Tech World
             </a>
             <button class="btn btn-outline-info ml-auto ">
                 Contact Us
@@ -73,17 +73,19 @@
    <div class="container py-5">
     <div class="row text-center align-items-center my-5 py-6">
         <div class="col-12 col-md-6">
+            <div class = "hero-btns animate__animated animate__fadeInUp animate__slow">
             <img 
             class="img-fluid rounded-circle w-75"
             src="Designer _Two Color.svg" 
-            alt="mansha srivastava"
+            alt="Rudramadhaba Mishra"
             />
+          </div>
         </div>
         <div class="col-12 col-md-6 pt-5">
             <div class="font-weight-light" style="font-size : 50px;">
-            Hii, we are <span class="text-info">Creative Minds</span>
+            Hii, we are <span class="text-info">The RM Family</span>
             </div>
-            <h4 class="font-weight-light">We Design & Develope.</h4>
+            <h4 class="font-weight-light">We deal with Web Development Projects</h4>
             </div>
         </div>
     </div>
@@ -161,7 +163,7 @@
     <div class="row my-5 pt-3">
     <div class="col-12 col-md-4 my-2">
          <div class="card shadow h-100">
-            <img class="card-img-top" src="project1.jfif" alt="Free Image">
+            <img class="card-img-top" src="11.png" alt="Free Image">
             <img style=" object-fit:cover"/>
             <div class="card-body">
                 <h4 class="card-title">
@@ -175,7 +177,7 @@
     <div class="col-12 col-md-4 my-2">
         <!--<a href="#" class="streched-link">-->
         <div class="card shadow h-100">
-            <img class="card-img-top" src="project1.jfif" alt="Free Image">
+            <img class="card-img-top" src="12.jpg" alt="Free Image">
             <img style="object-fit:cover"/>
             <div class="card-body">
                 <h4 class="card-title">
@@ -188,11 +190,11 @@
     </div>
      <div class="col-12 col-md-4 my-2">
          <div class="card shadow h-100">
-            <img class="card-img-top" src="project1.jfif" alt="Free Image" >
+            <img class="card-img-top" src="13.jpg" alt="Free Image" >
             <img style="object-fit:cover"/>
             <div class="card-body">
                 <h4 class="card-title">
-                    Project 1
+                    Project 3
                 </h4>
                 <p class="card-text">This project is about...</p>
                 <a href="#" class="streched-link"></a>
@@ -432,7 +434,7 @@
    <div>
        <img
            class="rounded-circle";
-           src="pic1.jpg"
+           src="1.jpg"
            alt="test-img"
            style="width: 100px;height: 100px;"
        />
@@ -440,7 +442,7 @@
    <div>
        <img
            class="rounded-circle";
-           src="pic1.jpg"
+           src="2.jpg"
            alt="test-img"
            style="width: 100px;height: 100px;"
        />
@@ -448,7 +450,7 @@
    <div>
        <img
            class="rounded-circle";
-           src="pic1.jpg"
+           src="3.jpg"
            alt="test-img"
            style="width: 100px;height: 100px;"
        />
@@ -458,7 +460,7 @@
    <div>
        <img
            class="rounded-circle";
-           src="pic1.jpg"
+           src="4.jpg"
            alt="test-img"
            style="width: 100px;height: 100px;"
        />
@@ -466,7 +468,7 @@
    <div>
        <img
            class="rounded-circle";
-           src="pic1.jpg"
+           src="7.jpg"
            alt="test-img"
            style="width: 100px;height: 100px;"
        />
@@ -474,7 +476,7 @@
    <div>
        <img
            class="rounded-circle";
-           src="pic1.jpg"
+           src="5.jpg"
            alt="test-img"
            style="width: 100px;height: 100px;"
        />
@@ -487,9 +489,10 @@
   <!-- life in.. start-->
    <div class="container text-center py-5 ">
     <h1 class="font-weight-light">
-     Life in <span class="text-info">Srivastava & Co.</span>
+     <span class="text-info">Life in RM'S Tech World</span>
     </h1>
-    <div class="lead pb-5">We Ideate and Create.</div>
+    <h4 class="font-weight-light"></h4>
+    <span class="textarea">We Ideate and Create.</span>
     </div>
 <div class="container py-2">
     <div class="row min-vh-100 align-items-center">
@@ -627,7 +630,7 @@
     <div class="row my-5 pt-3">
     <div class="col-12 col-md-4 my-2">
          <div class="card shadow h-100">
-            <img class="card-img-top" src="abu-dhabi.jpg" alt="Free Image">
+            <img class="card-img-top" src="8.jpg" alt="Free Image">
             <img style=" object-fit:cover"/>
             <div class="card-body">
                 <h4 class="card-title">
@@ -640,7 +643,7 @@
     </div>
     <div class="col-12 col-md-4 my-2">
         <div class="card shadow h-100">
-            <img class="card-img-top" src="abu-dhabi.jpg" alt="Free Image">
+            <img class="card-img-top" src="9.jpg" alt="Free Image">
             <img style="object-fit:cover"/>
             <div class="card-body">
                 <h4 class="card-title">
@@ -652,7 +655,7 @@
     </div>
      <div class="col-12 col-md-4 my-2">
          <div class="card shadow h-100">
-            <img class="card-img-top" src="abu-dhabi.jpg" alt="Free Image">
+            <img class="card-img-top" src="10.jpg" alt="Free Image">
             <img style="object-fit:cover"/>
             <div class="card-body">
                 <h4 class="card-title">
@@ -678,7 +681,7 @@
     <div class="contactfrm pt-5 pb-3 mx-3">
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col-lg-6 col-md-6 col-12">
-          <img src="map.jpg" alt="map" height="80%">
+          <img src="map1.png" alt="map1" height="80%">
         </div>
         <div class="col-lg-6 col-md-6 col-12">
           <h1 class="title text-center pt-2">Contact US</h1>
@@ -726,30 +729,28 @@
                         <a href="#" class="text-light d-block">Home</a>
                         <a href="#" class="text-light d-block">Contact Us</a>
                         <a href="#" class="text-light d-block">
-                            Write a recommendtion <i class="fas fa-heart text-light"></i>
+                            Write a recommendation <i class="fas fa-heart text-light"></i>
                         </a>
                     </div>
                 <div class="col-12 col-md-4 text-light text-justify py-3">
-                    <p>Ambitioni dedisse scripsisse iudicaretur. Cras mattis iudicium purus sit amet fermentum.
-                     Donec sed odio operae, eu vulputate felis rhoncus. Praeterea iter est quasdam res quas ex communi. 
-                     At nos hinc posthac, sitientis piros Afros. Petierunt uti sibi concilium totius Galliae in diem certam indicere.
-                     Cras mattis iudicium purus sit amet fermentum.</p>
+                    <p>We deal with new technologies and autonomous advancement.
+                       To get working with us drop a message or connect through linkedin and other social handles</p>
                 </div>
                 <div class="col-12 col-md-4 py-3">
                     <h5 class="text-info pb-3">Social</h5>
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/rudramadhaba-mishra-386a83176/">
                         <i class="fab fa-linkedIn text-light h1 d-block pb-1"></i>
                     </a>
-                    <a href="#">
+                    <a href="https://github.com/RUDRAMADHABA">
                         <i class="fab fa-github text-light h1 d-block pb-1"></i>
                     </a>
-                    <a href="#">
+                    <a href="https://www.facebook.com/rudramadhaba.mishra/">
                         <i class="fab fa-facebook text-light h1 d-block"></i>
                     </a>
                 </div>
             </div>
                 <div class="text-muted py-3">
-                    <p>Copyright @ Srivastava & Co. 2021</p>
+                    <p>Copyright @RM'S Tech World 2021</p>
                 </div>
             </div>
     </footer>
