--- a/index.html
+++ b/index.html
@@ -495,40 +495,40 @@
     <span class="textarea">We Ideate and Create.</span>
     </div>
 <div class="container py-2">
-    <div class="row min-vh-100 align-items-center">
-        <div class="col-lg-8 offset-lg-2" id="slider">
+    <div class="row min-vh-50 align-items-center">
+        <div class="col-lg-7 offset-lg-2" id="slider">
             <div id="myCarousel" class="carousel slide shadow">
                 <!-- main slider carousel items -->
                 <div class="carousel-inner">
                     <div class="active carousel-item" data-slide-number="0">
-                        <img src="StockSnap_IS1XRUWYW4.jpg" class="img-fluid">
+                        <img src="14.jpg" class="img-fluid">
                     </div>
                     <div class="carousel-item" data-slide-number="1">
-                        <img src="StockSnap_IS1XRUWYW4.jpg" class="img-fluid">
+                        <img src="15.jpg" class="img-fluid">
                     </div>
                     <div class="carousel-item" data-slide-number="2">
-                        <img src="StockSnap_IS1XRUWYW4.jpg" class="img-fluid">
+                        <img src="16.jpg" class="img-fluid">
                     </div>
                     <div class="carousel-item" data-slide-number="3">
-                        <img src="StockSnap_IS1XRUWYW4.jpg" class="img-fluid">
+                        <img src="17.jpg" class="img-fluid">
                     </div>
                     <div class="carousel-item" data-slide-number="4">
-                        <img src="StockSnap_IS1XRUWYW4.jpg" class="img-fluid">
+                        <img src="18.jpg" class="img-fluid">
                     </div>
                     <div class="carousel-item" data-slide-number="5">
-                        <img src="StockSnap_IS1XRUWYW4.jpg" class="img-fluid">
+                        <img src="19.jpg" class="img-fluid">
                     </div>
                     <div class="carousel-item" data-slide-number="6">
-                        <img src="StockSnap_IS1XRUWYW4.jpg" class="img-fluid">
+                        <img src="20.jpg" class="img-fluid">
                     </div>
                     <div class="carousel-item" data-slide-number="7">
-                        <img src="StockSnap_IS1XRUWYW4.jpg" class="img-fluid">
+                        <img src="21.jpg" class="img-fluid">
                     </div>
                     <div class="carousel-item" data-slide-number="8">
-                        <img src="StockSnap_IS1XRUWYW4.jpg" class="img-fluid">
+                        <img src="22.jpg" class="img-fluid">
                     </div>
                     <div class="carousel-item" data-slide-number="9">
-                        <img src="StockSnap_IS1XRUWYW4.jpg" class="img-fluid">
+                        <img src="23.jpg" class="img-fluid">
                     </div>
 
                     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
