--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             </button>
             <div class="collapse navbar-collapse flex-grow-0" id="collapseNav">
                 <div class="navbar-nav">
-                    <a href="#" class="nav-item nav-link text-dark h6 mx-3 my-auto">
+                    <a href="#Blogs" class="nav-item nav-link text-dark h6 mx-3 my-auto">
                         Blogs
                     </a>
-                    <a href="#" class="nav-item nav-link text-dark h6 mx-3 my-auto">
+                    <a href="#Projects" class="nav-item nav-link text-dark h6 mx-3 my-auto">
                         Projects
                     </a>
                 </div>
@@ -76,7 +76,7 @@
             <div class = "hero-btns animate__animated animate__fadeInUp animate__slow">
             <img 
             class="img-fluid rounded-circle w-75"
-            src="Designer _Two Color.svg" 
+            src="download.jpg" 
             alt="Rudramadhaba Mishra"
             />
           </div>
@@ -155,7 +155,7 @@
 <!--technology Stack ends--> 
 
 <!--projects section-->
-<div class="container text-center my-5">
+<div class="container text-center my-5" id="Projects">
     <h1 class="font-weight-light">
         Our <span class="text-info">Projects</span>
     </h1>
@@ -622,7 +622,7 @@
 <!-- news letter ends -->
 
   <!--Blogs-->
-<div class="container text-center my-5">
+<div class="container text-center my-5"id="Blogs">
     <h1 class="font-weight-light">
         Latest <span class="text-info">Blogs</span>
     </h1>
