--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <a href="/" class="navbar-brand text-dark font-weight-bold">
             RM's Tech World
             </a>
-            <button class="btn btn-outline-info ml-auto ">
+            <a href="#Contact Us" button class="btn btn-outline-info ml-auto ">
                 Contact Us
-            </button>
+            </button></a>
             <button
             class="navbar-toggler"
             data-toggle="collapse"
@@ -677,7 +677,7 @@
 </div>
 </div>
 <!--Blogs end-->
-<div class="contactus">
+<div class="contactus" id="Contact Us">
     <div class="contactfrm pt-5 pb-3 mx-3">
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col-lg-6 col-md-6 col-12">
